--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,7 @@
               }
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles/main.scss"
             ],
             "scripts": [],
             "server": "src/main.server.ts",
@@ -43,6 +43,9 @@
           },
           "configurations": {
             "production": {
+              "define": {
+                "API_URL": "'https://blog-java.onrender.com'"
+              },
               "budgets": [
                 {
                   "type": "initial",
@@ -58,6 +61,9 @@
               "outputHashing": "all"
             },
             "development": {
+              "define": {
+                "API_URL": "'http://localhost:8080'"
+              },
               "optimization": false,
               "extractLicenses": false,
               "sourceMap": true
@@ -96,7 +102,7 @@
               }
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles/main.scss"
             ],
             "scripts": []
           }
